--- a/src/schema/objects/entities.yaml
+++ b/src/schema/objects/entities.yaml
@@ -84,11 +84,17 @@ direction:
     Therefore, if the `dir-<label>` entity is present in a filename,
     `"PhaseEncodingDirection"` MUST be defined in the associated metadata.
 
-    If the `<label>` is `AP`, `PA`, `LR`, `RL`, `SI`, or `IS`,
+    Labels need not follow any particular convention,
+    and JSON metadata MUST take precedence in interpreting an image.
+    Generic labels, such as `dir-reference` and `dir-reversed` avoid any possible inconsistency.
+    `dir-j0` and `dir-j1` can indicate `"PhaseEncodingDirection": "j"` and `"j-"` (or vice versa),
+    identifying the phase-encoding axis while avoiding indicating polarity.
+
+    To avoid inconsistency, if the `<label>` is `AP`, `PA`, `LR`, `RL`, `SI`, or `IS`,
     then the `"PhaseEncodingDirection"` SHOULD correspond to the data
     axis that most closely aligns with the cardinal direction and orientation.
-    For example, `dir-AP` for an image in RAS+ orientation SHOULD have
-    `"PhaseEncodingDirection": "j-"`.
+    For example, `dir-PA` and `dir-AP` for an image in RAS+ orientation SHOULD have
+    `"PhaseEncodingDirection": "j"` and `"j-"`, respectively.
   type: string
   format: label
 echo:
