--- a/src/schema/rules/tabular_data/derivatives/common_derivatives.yaml
+++ b/src/schema/rules/tabular_data/derivatives/common_derivatives.yaml
@@ -10,6 +10,7 @@ SegmentationLookup:
     color: optional
     mapping: optional
   index_columns: [index]
+  additional_columns: allowed
 
 Descriptions:
   selectors:
