fix: Add initial_columns to blood.tsv rule to match spec

--- a/src/schema/rules/tabular_data/pet.yaml
+++ b/src/schema/rules/tabular_data/pet.yaml
@@ -4,6 +4,7 @@ Blood:
     - datatype == "pet"
     - suffix == "blood"
     - extension == ".tsv"
+  initial_columns: [time]
   columns:
     time: required
     plasma_radioactivity:
