feat(schema): Add associations rule for electrodes

--- a/src/schema/meta/associations.yaml
+++ b/src/schema/meta/associations.yaml
@@ -90,3 +90,14 @@ coordsystem:
     suffix: coordsystem
     extension: .json
   inherit: true
+
+electrodes:
+  selectors:
+    - intersects([suffix], ['eeg', 'ieeg', 'meg'])
+    - extension != '.json'
+  target:
+    suffix: electrodes
+    extension: .tsv
+    entities:
+      - space
+  inherit: true
