--- a/src/schema/objects/files.yaml
+++ b/src/schema/objects/files.yaml
@@ -68,12 +68,15 @@ participants:
   display_name: Participant Information
   file_type: regular
   description: |
-    The purpose of this RECOMMENDED file is to describe properties of participants
-    such as age, sex, handedness, species and strain.
+    The purpose of this RECOMMENDED file is to describe unchanging properties of participants
+    such as sex, species, and strain.
     If this file exists, it MUST contain the column `participant_id`,
     which MUST consist of `sub-<label>` values identifying one row for each participant,
     followed by a list of optional columns describing participants.
     Each participant MUST be described by one and only one row.
+    For participants with multiple sessions, see
+    the [sessions file](SPEC_ROOT/modality-agnostic-files.md#sessions-file)
+    and [demographics file](SPEC_ROOT/modality-agnostic-files.md#demographics-file) sections.
 
     The `participant_id` entries MUST be a superset of all subject directories
     and all `participant_id` entries found among phenotypic and assessment data
