feat: Recommend EpochLength only if RecordingType is epoched

--- a/src/schema/rules/sidecars/electrophys.yaml
+++ b/src/schema/rules/sidecars/electrophys.yaml
@@ -3,6 +3,6 @@
 EpochedData:
   selectors:
     - intersects([datatype], ['eeg', 'meg', 'ieeg'])
-    - sidecar.RecordingType == 'EpochLength'
+    - sidecar.RecordingType == 'epoched'
   fields:
     EpochLength: recommended
