--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,7 @@ nav:
           - Quantitative MRI: appendices/qmri.md
           - Arterial Spin Labeling: appendices/arterial-spin-labeling.md
           - Cross modality correspondence: appendices/cross-modality-correspondence.md
+          - Phenotypic data guidelines: appendices/phenotype.md
       - Changelog: CHANGES.md
   - The BIDS Starter Kit:
       - Website: https://bids-standard.github.io/bids-starter-kit/
