chore: Exclude TYPE_CHECKING sections from coverage

--- a/tools/schemacode/pyproject.toml
+++ b/tools/schemacode/pyproject.toml
@@ -95,6 +95,11 @@ source = [
 [tool.coverage.run]
 parallel = true
 
+[tool.coverage.report]
+exclude_also = [
+  "if.*TYPE_CHECKING:",
+]
+
 # Release process:
 # cd tools/schemacode
 # uvx bump-my-version bump pre_label --tag
