ci: attempt to add dev mode tests to schemacode workflow

--- a/.github/workflows/schemacode_ci.yml
+++ b/.github/workflows/schemacode_ci.yml
@@ -55,11 +55,21 @@ jobs:
       matrix:
         os: ["ubuntu-latest"]
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        install-type: [wheel, dev]
         include:
           - os: macos-latest
             python-version: 3
+            install-type: wheel
+          - os: macos-latest
+            python-version: 3
+            install-type: dev
           - os: windows-latest
             python-version: 3
+            install-type: wheel
+          - os: windows-latest
+            python-version: 3
+            install-type: dev
+
     name: ${{ matrix.os }} with Python ${{ matrix.python-version }}
     steps:
       - uses: actions/checkout@v4
@@ -79,9 +89,15 @@ jobs:
           name: Packages
           path: dist
 
-      - name: "Install package"
+      - if: matrix.install-type == 'wheel'
+        name: "Install package from wheel"
         run: |
           pip install $( ls dist/*.whl )[all]
+
+      - if: matrix.install-type == 'dev'
+        name: "Install package in dev mode"
+        run: |
+          pip install -e .[all]
 
       - name: "Run tests"
         run: |
