--- a/.github/workflows/schemacode_ci.yml
+++ b/.github/workflows/schemacode_ci.yml
@@ -69,8 +69,7 @@ jobs:
       - name: "Display Python version"
         run: python -c "import sys; print(sys.version)"
 
-      - if: matrix.install-type == 'wheel'
-        name: "Install package from wheel"
+      - name: "Install package in dev mode"
         run: pip install -e tools/schemacode[all]
 
   test:
