--- a/src/schema/rules/checks/dataset.yaml
+++ b/src/schema/rules/checks/dataset.yaml
@@ -14,6 +14,18 @@ SubjectFolders:
   checks:
     - length(dataset.subjects.sub_dirs) > 0
 
+NoSubjectFolders:
+  issue:
+    code: NOSUBJECT_FOLDERS
+    message: |
+      There must be no subject directories (labeled "sub-*") in the root of the "project" type BIDS dataset.
+    level: error
+  selectors:
+    - path == '/dataset_description.json'
+    - dataset.dataset_description.DatasetType == "project"
+  checks:
+    - length(dataset.subjects.sub_dirs) == 0
+
 # 49
 ParticipantIDMismatch:
   issue:
