--- a/src/schema/rules/files/raw/task.yaml
+++ b/src/schema/rules/files/raw/task.yaml
@@ -112,6 +112,7 @@ timeseries__anat:
     echo: optional
     part: optional
     chunk: optional
+    modality: optional
 
 timeseries__func:
   $ref: rules.files.raw.task.timeseries
