--- a/src/schema/objects/enums.yaml
+++ b/src/schema/objects/enums.yaml
@@ -360,7 +360,7 @@ individual:
     In context of surfaces this space has been referred to as `fsnative`.
 
     In order for this space to be interpretable, `SpatialReference` metadata MUST be provided.
-study:
+study__space:
   value: study
   display_name: study
   description: |
@@ -368,6 +368,11 @@ study:
     This coordinate system requires specifying an additional file to be fully defined.
 
     In order for this space to be interpretable, `SpatialReference` metadata MUST be provided.
+study__datasettype:
+  value: study
+  display_name: study
+  description: |
+    A study BIDS dataset.
 scanner:
   value: scanner
   display_name: scanner
@@ -1319,11 +1324,6 @@ derivative:
   display_name: derivative
   description: |
     A derived BIDS dataset.
-project:
-  value: project
-  display_name: project
-  description: |
-    A project BIDS dataset.
 balanced:
   value: balanced
   display_name: balanced
