--- a/src/schema/rules/checks/dataset.yaml
+++ b/src/schema/rules/checks/dataset.yaml
@@ -6,11 +6,11 @@ SubjectFolders:
   issue:
     code: SUBJECT_FOLDERS
     message: |
-      There are no subject directories (labeled "sub-*") in the root of this raw BIDS dataset.
+      There are no subject directories (labeled "sub-*") in the root of this BIDS dataset.
     level: warning
   selectors:
     - path == '/dataset_description.json'
-    - dataset.dataset_description.DatasetType == "raw"
+    - dataset.dataset_description.DatasetType != "study"
   checks:
     - length(dataset.subjects.sub_dirs) > 0
 
